refactor: Adopt `SequencedCollection`
Use this link to re-run the recipe: https://app.moderne.io/recipes/org.openrewrite.java.migrate.util.SequencedCollection?organizationId=SmFiUmVm

Co-authored-by: Moderne <team@moderne.io>